--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
+  margin: 0px !important;
 }
 
 ::-webkit-scrollbar {
@@ -36,6 +36,10 @@ p {
 
 .h-full {
   height: 100vh;
+}
+
+.h-half {
+  height: 50vh;
 }
 
 .nav-item {
